--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@expo-google-fonts/albert-sans": "^0.4.1",
+    "@react-native-picker/picker": "^2.11.1",
     "@supabase/supabase-js": "^2.50.5",
+    "expo-app-loading": "^2.1.1",
     "flag-icons": "^7.5.0",
     "openai": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-native-web": "^0.20.0",
     "react-router-dom": "^7.6.3",
     "uuid": "^11.1.0"
   },
