--- a/lexi-mobile-ts/package.json
+++ b/lexi-mobile-ts/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "@supabase/supabase-js": "^2.52.0",
+    "dotenv": "^17.2.0",
     "expo": "~53.0.20",
     "expo-app-loading": "^2.1.1",
     "expo-av": "^15.1.7",
