--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@supabase/supabase-js": "^2.50.5",
     "expo-app-loading": "^2.1.1",
     "flag-icons": "^7.5.0",
+    "nativewind": "^4.1.23",
     "openai": "^4.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-native-safe-area-context": "^5.5.2",
     "react-native-web": "^0.20.0",
     "react-router-dom": "^7.6.3",
     "uuid": "^11.1.0"
